Add UI for higher JDK VM parameters